# moonlight-web

./: .env.example  .gitattributes  .gitignore  .gitmodules  .graphifyignore  .moonlight-web-dev  BUILD_COMMAND.cmd  CLAUDE.md  CONTRIBUTING.md  COPYRIGHT  README.md  README_en.md  RELEASE_NOTES.md  __cleanup.cmd  _build_temp.bat  _explore.bat  bld.cmd  build.bat  build.cmd  build.sh  build_and_check.bat  build_check.bat  build_do.sh  build_output.txt  build_run.sh  build_script.bat  build_test.cmd  check_files.sh  cmd_tmp_list.bat  do_build.bat  do_build.cmd  find-stream-files.sh  find-stream-session.txt  find_domain_refs.sh  find_files.sh  find_input.bat  find_input.cmd  find_input_files.bat  find_keyboard_files.sh  find_moonlight_qt_video.sh  (+36 more)
.claude/: build_run.sh  check_build_skill.sh  cleanup.sh  do_build.sh  gather_diff.sh  list_results.sh  prompt_engineering_manager.md  run_list.sh  settings.json  settings.local.json  temp_build.bat  temp_build.sh  temp_find_backend.sh  temp_find_frontend.sh  temp_list_stream.bat  temp_ls_backend.sh  temp_ls_frontend.sh  temp_ls_results.sh
.github/: CODEOWNERS
backend/: .clang-format  .clang-tidy  CMakeLists.txt  ComputerManager.moc  app_icon.rc.in  backend.pro  backend.pro.tmp.18092.4626763bafe2  backend.pro.tmp.18092.dceaa2e16f28  build.sh  build_and_check.bat  build_check.bat  build_check.sh  build_fast.bat  build_libdatachannel.bat  build_miniupnpc.bat  build_msvc.bat  build_msvc_direct.cmd  build_now.cmd  build_output.txt  build_release.bat  build_release_cmd.bat  build_test.bat  cleanup_temp.ps1  compile.cmd  delegate_build.bat  do_build.bat  go.cmd  moc_predefs.h  patch_makefile.ps1  restore_main.sh  run_build.bat  run_build.cmd  run_build.sh  run_build_simple.sh  run_server.bat  simple_build.cmd
backend/cert/: cert.pem  key.pem
backend/installer/: build_msi.bat  deploy.bat  moonlight-web.iss  moonlight-web.wxs  moonlightweb.iss  moonlightweb.wxs
backend/installer/macos/: build-pkg.sh  distribution.xml
backend/installer/macos/plugin/: Info.plist  MWCommon.h  MWInstallerPane.h  MWSunshinePane.h  MWSunshinePane.m  MWSunshinePane.xib
backend/installer/macos/plugins/: InstallerSections.plist
backend/installer/macos/resources/: conclusion.html  license.html  welcome.html
backend/installer/macos/scripts/: postinstall
backend/libs/windows/lib/: libssl64MD.lib
backend/libs/windows/lib/x64/: libcrypto64MD.lib
backend/packaging/: moonlight-web.desktop  moonlightweb.desktop
backend/packaging/launchd/: com.moonlight-web.server.plist  com.moonlightweb.server.plist
backend/packaging/linux/: make-packages.sh
backend/packaging/systemd/: moonlight-web.service  moonlightweb.service
backend/packaging/windows/: install-service.bat  uninstall-service.bat
backend/scripts/: gen_compile_commands.sh  read_env.ps1  read_env_var.ps1  run_clang_tidy.sh
backend/src/: Autostart.cpp  Autostart.h  TrayManager.cpp  TrayManager.h  main.cpp  main.cpp.tmp.24204.72e431eb645c  main.cpp.tmp.24204.80a918910312  main.cpp.tmp.24204.a595ca011000  tmp_list.txt
backend/src/backend/: ComputerManager.cpp  ComputerManager.h  IdentityManager.cpp  IdentityManager.h  NvAddress.h  NvApp.h  NvComputer.cpp  NvComputer.h  NvHTTP.cpp  NvHTTP.h  NvPairingManager.cpp  NvPairingManager.h  SunshineInstaller.cpp  SunshineInstaller.h  SunshineRestClient.cpp  SunshineRestClient.h
backend/src/common/: CrashHandler.cpp  CrashHandler.h  Logger.cpp  Logger.h  MacActivity.h  MacActivity.mm  Types.h
backend/src/input/: README
backend/src/network/: AcmeClient.cpp  AcmeClient.h  DdnsClient.cpp  DdnsClient.h  DeSecClient.cpp  DeSecClient.h  GeoIpService.cpp  GeoIpService.h  InternetAccessManager.cpp  InternetAccessManager.h  NportClient.cpp  NportClient.h  PdnsClient.cpp  PdnsClient.h  StunClient.cpp  StunClient.h  UPNPClient.cpp  UPNPClient.h  UpdateChecker.cpp  UpdateChecker.h  ZrokClient.cpp  ZrokClient.h
backend/src/server/: AppSettings.cpp  AppSettings.h  AuthManager.cpp  AuthManager.h  CertManager.cpp  CertManager.h  ConnectionGuard.cpp  ConnectionGuard.h  ControlChannel.cpp  ControlChannel.h  HttpParser.cpp  HttpParser.h  HttpServer.cpp  HttpServer.h  Provisioning.cpp  Provisioning.h  RestRouter.cpp  RestRouter.h  StaticFileHandler.cpp  StaticFileHandler.h
backend/src/server/routes/: AuthRoutes.cpp  AuthRoutes.h  HostRoutes.cpp  HostRoutes.h  SystemRoutes.cpp  SystemRoutes.h
backend/src/streaming/: ClipboardBridge.cpp  ClipboardBridge.h  DataChannelRelay.cpp  DataChannelRelay.h  DataChannelRelay.h.tmp.26464.985044b385cd  EnetControlStream.cpp  EnetControlStream.h  FrameSender.cpp  FrameSender.h  HostAudioSink.cpp  HostAudioSink.h  InputCrypto.cpp  InputCrypto.h  InputEncoder.cpp  InputEncoder.h  MediaTrackRelay.cpp  MediaTrackRelay.h  MoonlightShim.cpp  MoonlightShim.h  RelayBase.h  RtspClient.cpp  RtspClient.h  Session.cpp  Session.h  SignalingServer.cpp  SignalingServer.h  StreamConfig.cpp  StreamConfig.h  StreamRelay.cpp  StreamRelay.h  StreamWorkerHost.cpp  StreamWorkerHost.h  TransportPriorities.h  list_files.sh
backend/src/streaming/worker/: StreamWorkerMain.cpp  StreamWorkerMain.h
backend/tests/: CMakeLists.txt  UPNP_TEST_PLAN.md  check_coverage.ps1  main.cpp  run_coverage.bat  run_upnp_tests.bat  security_main.cpp  test_app_settings.cpp  test_auth_manager.cpp  test_connection_guard.cpp  test_framework.h  test_http_parser.cpp  test_input_crypto.cpp  test_input_encoder.cpp  test_rest_router.cpp  test_static_files.cpp  test_stream_config.cpp  test_upnpclient.cpp  tests.pro
backend/tools/: build_nmake.bat  download_binaries.ps1  download_cloudflared.ps1  download_zrok.ps1  prepare_node_nport.ps1
docs/: CLAUDE.md  audit-ui-2026-06.md  audit-webrtc-media-latency.md  i18n.md  internet-plan.md  moonlight-qt-architecture.md  moonlight-web-plan.md  moonlight-zrok.md  moonlightweb-plan.md  prompt-engineering-manager-webrtc-hevc-audit.md  sunshine-api.md  testing.md  video-path-webrtc-dc-tcp.md
frontend/: .prettierignore  .tolgeerc.json  eslint.config.js  index.html  manifest.webmanifest  package-lock.json  package.json  prompt-frontend.md  (+3 more)
(+375 files in other folders)
